# mcp-acp-reference-sep

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
examples/: agent_demo.py
examples/agents/: admin_agent.py  finance_agent.py
examples/scenarios/: allowed_call.py  delegation_chain.py  denied_call.py  param_constraint.py
mcp_server/: Dockerfile  manifest.json  server.py  tools.py
middleware/: identity.py  interceptor.py  pdp_client.py
opa/: Dockerfile
opa/data/: tools_registry.json
opa/policies/: agent_authz.rego  delegation.rego  escalation.rego
tests/: test_interceptor.py  test_opa_policies.py  test_tam_endpoint.py
